# blsZK

./: .gitignore  Cargo.toml  hardhat.config.js  package-lock.json  package.json
benches/: proving_benchmark.rs
circuits/: bls_verify.circom
contracts/: IBLSVerifier.sol  ZKRollupBLS.sol
scripts/: compile.sh  deploy.js  generate_test_proof.sh
src/: lib.rs  main.rs
test/: ZKRollupBLS.test.js
