[package]
name = "bls-zk-prover"
version = "1.0.0"
authors = ["ZK-Rollup"]
edition = "2021"
description = "Zero-Knowledge Prover for BLS Signature Verification"
license = "MIT"

[lib]
name = "bls_zk_prover"
path = "src/lib.rs"

[[bin]]
name = "bls-prover"
path = "src/main.rs"

[dependencies]
# Arkworks - Core ZK libraries
ark-bn254 = "0.4.0"
ark-circom = "0.5.0"
ark-groth16 = "0.4.0"
ark-relations = "0.4.0"
ark-serialize = "0.4.0"
ark-std = "0.4.0"
ark-ff = "0.4.0"

# Utility libraries
num-bigint = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
num-traits = "0.2"
# CLI and async
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"

[[bench]]
name = "proving_benchmark"
harness = false

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"


# CLI
clap = { version = "4.4", features = ["derive"] }

# Async runtime (for CLI)
tokio = { version = "1.35", features = ["full"] }

# Random
rand = "0.8"